<resources>
    <string name="app_name">BucharestTour</string>

    <string name="pubs_bars">Pubs and Bars</string>
    <string name="coffee_tea"><![CDATA[Coffee & Tea]]></string>
    <string name="restaurants">Restaurants</string>
    <string name="tourist_attractions">Tourist Attractions</string>

    <string name="tourist_attractions_cover_photo">Tourist Attractions cover photo</string>
    <string name="coffee_tea_cover_photo">Coffee Tea cover photo</string>
    <string name="restaurants_cover_photo">Restaurants cover photo</string>
    <string name="pubs_bars_cover_photo">Pubs bars cover photo</string>

    <string name="description_image">General image of a list</string>
    <string name="image_of_a_list_item">Image of a list item</string>
    <string name="address">Address</string>
    <string name="location_name">Location Name</string>
    <string name="website">website</string>

    <string name="touristic_attractions_palace_of_parliament">Palace of Parliament</string>
    <string name="touristic_attractions_romanian_athenaeum">Romanian Athenaeum</string>
    <string name="touristic_attractions_triumph_arch">Triumph Arch</string>
    <string name="touristic_attractions_grigore_antipa_national_museum">Grigore Antipa National Museum of Natural History</string>
    <string name="touristic_attractions_coltea_hospital">Colțea Hospital</string>

    <string name="address_palace_of_parliament">Izvor Street 2–4</string>
    <string name="address_romanian_athenaeum">Benjamin Franklin Street 1–3</string>
    <string name="address_triumph_arch">Arcul de Triumf Plaza</string>
    <string name="address_grigore_antipa_national_museum">Kiseleff Avenue 1</string>
    <string name="address_coltea_hospital">Ion C. Brătianu Avenue 1</string>

    <string name="website_palace_of_parliament">http://cic.cdep.ro/ro</string>
    <string name="website_romanian_athenaeum">http://fge.org.ro/en/romanian-atheneum.html</string>
    <string name="website_triumph_arch">http://en.wikipedia.org/wiki/Arcul_de_Triumf</string>
    <string name="website_grigore_antipa_national_museum">http://antipa.ro/ro</string>
    <string name="website_coltea_hospital">http://www.coltea.ro/</string>

    <string name="coffee_tea_manufaktura_by_doncafe">Manufaktura by Doncafe</string>
    <string name="coffee_tea_frudisiac">Frudisiac</string>
    <string name="coffee_tea_coffeol_romania">Coffeol Romania</string>
    <string name="coffee_tea_meron">Meron Cafe</string>
    <string name="coffee_tea_bohemia_tea_house">Bohemia Tea House</string>

    <string name="address_manufaktura_by_doncafe">Pierre de Coubertin Avenue 3–5</string>
    <string name="address_frudisiac">Bitolia Entrance 4</string>
    <string name="address_coffeol_romania">Franceză Street 44</string>
    <string name="address_meron">Victoriei Avenue 155</string>
    <string name="address_bohemia_tea_house">Poiana Narciselor Street 1</string>

    <string name="website_manufaktura_by_doncafe">http://manufakturacafe.ro/</string>
    <string name="website_frudisiac">http://www.facebook.com/frudisiac</string>
    <string name="website_coffeol_romania">http://www.coffeol.ro/</string>
    <string name="website_meron">http://caffemeron.com/</string>
    <string name="website_bohemia_tea_house">http://bohemiatea.ro/wp/</string>

    <string name="restaurants_hanu_lui_manuc">Restaurant Hanu\' lui Manuc</string>
    <string name="restaurants_hanu_berarilor">Hanu\' Berarilor Casa Soare</string>
    <string name="restaurants_stadio">Stadio</string>
    <string name="restaurants_upstairs_rooftop">Upstairs Rooftop</string>
    <string name="restaurants_vivo">Vivo Fusion Food Bar</string>
    <string name="restaurants_hard_rock_cafe">Hard Rock Cafe</string>

    <string name="address_hanu_lui_manuc">Franceză Street 62–64</string>
    <string name="address_hanu_berarilor">Poenaru Bordea Street 2</string>
    <string name="address_stadio">Ion Câmpineanu Street 11</string>
    <string name="address_upstairs_rooftop">Sevastopol Street 24</string>
    <string name="address_vivo"> Floreasca Avenue 60</string>
    <string name="address_hard_rock_cafe">Kiseleff Avenue 32</string>

    <string name="website_hanu_lui_manuc">http://www.hanumanucrestaurant.ro/ro/</string>
    <string name="website_hanu_berarilor">http://www.hanuberarilor.ro/en/</string>
    <string name="website_stadio">http://www.stadio.ro/</string>
    <string name="website_upstairs_rooftop">http://www.upstairs.ro/</string>
    <string name="website_vivo">http://vivofoodbar.com/</string>
    <string name="website_hard_rock_cafe">http://www.hardrock.com/cafes/bucharest/</string>

    <string name="pubs_bars_fire_club">Fire Club</string>
    <string name="pubs_bars_bounce">Bounce</string>
    <string name="pubs_bars_silver_church">Silver Church Club</string>
    <string name="pubs_bars_the_vintage">The Vintage</string>
    <string name="pubs_bars_skybar">SkyBar</string>
    <string name="pubs_bars_vinexpert">Vinexpert</string>
    <string name="pubs_bars_nomad">NOMAD Skybar</string>

    <string name="address_fire_club">Gabroveni Street 12</string>
    <string name="address_bounce">Gabroveni Street 20 (French Passage)</string>
    <string name="address_silver_church">Plevnei Avenue 61</string>
    <string name="address_the_vintage">Smârdan Street 43</string>
    <string name="address_skybar">Dorobanți Avenue 155, 5th floor</string>
    <string name="address_vinexpert">Victoriei Avenue 155</string>
    <string name="address_nomad">Smârdan Street 30</string>

    <string name="website_fire_club">http://www.fire.ro/</string>
    <string name="website_bounce">http://www.facebook.com/BouncePub/</string>
    <string name="website_silver_church">http://silver.church/</string>
    <string name="website_the_vintage">http://www.thevintagepub.ro/</string>
    <string name="website_skybar">http://www.skybar.ro/</string>
    <string name="website_vinexpert">http://www.vinexpert.ro/info/magazine-vinexpert/vinexpert-the-wine-bistro/</string>
    <string name="website_nomad">http://www.nomadskybar.ro/</string>


</resources>
