<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    card_view:cardBackgroundColor="@color/paleCardColor"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_of_a_list_item"
            android:scaleType="fitXY"
            tools:src="@drawable/start_tourist_attractions" />

        <TextView
            android:id="@+id/list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="@string/location_name" />

        <TextView
            android:id="@+id/list_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:text="@string/address" />

        <Button
            android:id="@+id/list_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@color/colorAccent"
            android:text="@string/website"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.v7.widget.CardView>