<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        tools:context=".StartActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/card_tourist_attractions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            card_view:cardBackgroundColor="@color/paleCardColor"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/tourist_attractions_cover_photo"
                    android:scaleType="fitXY"
                    android:src="@drawable/start_tourist_attractions" />

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image"
                    android:padding="6dp"
                    android:text="@string/tourist_attractions"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_coffee_tee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            card_view:cardBackgroundColor="@color/paleCardColor"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/coffee_tea_cover_photo"
                    android:scaleType="fitXY"
                    android:src="@drawable/start_coffee_tee" />

                <TextView
                    android:id="@+id/info_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image1"
                    android:padding="6dp"
                    android:text="@string/coffee_tea"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_restaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            card_view:cardBackgroundColor="@color/paleCardColor"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/restaurants_cover_photo"
                    android:scaleType="fitXY"
                    android:src="@drawable/start_restaurants" />

                <TextView
                    android:id="@+id/info_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image2"
                    android:padding="6dp"
                    android:text="@string/restaurants"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pubs_bars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            card_view:cardBackgroundColor="@color/paleCardColor"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/pubs_bars_cover_photo"
                    android:scaleType="fitXY"
                    android:src="@drawable/start_pubs_bars" />

                <TextView
                    android:id="@+id/info_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image3"
                    android:padding="6dp"
                    android:text="@string/pubs_bars"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>